Change logo gif to png

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="background"></div>
     <div id="opacity">
-      <div><img id="logo" src="./images/logo.gif" /></div>
+      <div><img id="logo" src="./images/logo.png" /></div>
       <div id="video">
         <iframe
           src="https://www.youtube.com/embed/0ekg7FmJ2KY"
